# ss

./: .gitignore
nexum/: CHANGELOG-v4.1.md  CHANGELOG-v4.2-signals.md  CHANGELOG-v4.2.md  CHANGELOG-v5.0.md  Nexum_Technical_Report_v3.md  docker-compose.gpu.yml  docker-compose.yml  setup-arch.sh
nexum/backend/: alembic.ini  pyproject.toml
nexum/backend/app/: main.py
nexum/backend/app/api/routes/: admin.py  audio.py  comments.py  demo.py  feedback.py  graph.py  intelligence.py  legal.py  queue.py  recrawl_signals.py  search.py  v4.py  videos.py  websocket.py
nexum/backend/app/core/: config.py  database.py  events.py  graph_database.py
nexum/backend/app/ml/audio/: alignment_service.py  audio_intelligence_service.py  change_points.py
nexum/backend/app/ml/calibration/: __init__.py
nexum/backend/app/ml/embeddings/: embedding_service.py
nexum/backend/app/ml/intelligence/: authenticity.py  semantic_evolution_graph_quality.py  social_dynamics.py  style_fingerprint.py  temporal_behavior.py
nexum/backend/app/ml/nlp/: comment_nlp_service.py
nexum/backend/app/ml/ocr/: ocr_service.py
nexum/backend/app/ml/speech/: speech_service.py
nexum/backend/app/ml/vision/: vision_service.py
nexum/backend/app/models/: models.py
nexum/backend/app/schemas/: schemas.py
nexum/backend/app/services/comments/: comment_ingestion_service.py  comment_processing_service.py
nexum/backend/app/services/crawler/: crawler_service.py
nexum/backend/app/services/demo/: demo_data_generator.py  signal_generators.py
nexum/backend/app/services/feedback/: feedback_service.py
nexum/backend/app/services/graph/: graph_service.py  traversal_service.py
nexum/backend/app/services/media/: media_service.py
nexum/backend/app/services/queue/: priority_queue_service.py
nexum/backend/app/services/recrawl/: recrawl_service.py
nexum/backend/app/services/search/: query_understanding.py  search_service.py  vector_store.py
nexum/backend/app/workers/: tasks.py
nexum/backend_new/: main.py  pyproject.toml
nexum/backend_new/api/: datapoints.py
nexum/backend_new/config/: settings.py
nexum/backend_new/db/: session.py
nexum/backend_new/models/: datapoint.py
nexum/config/: channels.txt  fusion_weights.yaml  graph.yaml  limits.yaml  models.yaml  priority_rules.yaml
nexum/docker/: Dockerfile.backend.bak  Dockerfile.frontend  Dockerfile.frontend.bak
nexum/frontend/: package.json  (+2 more)
(+5 files in other folders)
